tried fixing extra space at bottom of page- no luck. drop for now

--- a/styles/style.css
+++ b/styles/style.css
@@ -13,20 +13,27 @@
 }
 
 * {
-    font-family: 'Roboto Slab', serif;
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto Slab', serif;
 }
 
 /* This applies from 0px to 600px screen sizes */
+
+html {
+    height: 85vw;
+
+}
+
 body {
     /* background:burlywood; */
-    width: 85vw;
+    min-height: 100vh;
+    max-width: 100%;
     padding-left: 2em;
     font-size: var(--default-body-font-size);
-    
-}
-h3 {
-    margin: 0;
+    overflow: auto;
+    /* position: fixed; */
 }
 
 em {
@@ -47,7 +54,6 @@ ul, li {
 }
 
 .menu-button {
-
     background: none;
     border: 0.25ex dotted black;
     border-radius: 0;
@@ -117,11 +123,6 @@ article img {
     display: inline;
 }
 
-.photo-right img {
-    float: inline-end;
-    margin-left: 10px;
-}
-
 .tech-used {
     padding-left: 0;
 }
@@ -138,8 +139,11 @@ article img {
     font-size: var(--pseudo-class-font-size);
 }
 
-.contact-area {
+.contact {
+    height: 450px;
     margin-top: 15rem;
+}
+.contact-area {
     margin-left: 0;
 }
 .contact-area h2 {
@@ -147,7 +151,7 @@ article img {
     top: 0;
     right: 1.2rem;
 }
-.svg {
+svg {
     position: relative;
     top: -55rem;
     z-index: -1;
@@ -157,6 +161,7 @@ form {
     position: relative;
     top: 0rem;
     left: 1.2rem;
+    width: max-content;
 }
 #submit-form {
     background: none;
